--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Han</string>
     <string name="repo">Repo</string>
+    <string name="user">User</string>
+    <string name="net_error">Network error</string>
 </resources>
