--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="user">User</string>
     <string name="loading">Loading</string>
     <string name="net_error">Network error</string>
+    <string name="empty_text">No data</string>
 </resources>
