Add wanandroid api

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">Han</string>
     <string name="repo">Repo</string>
     <string name="user">User</string>
+    <string name="article">Article</string>
+    <string name="user_click">User button was clicked %1$s times</string>
     <string name="loading">Loading</string>
     <string name="net_error">Network error</string>
     <string name="empty_text">No data</string>
