--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,6 @@
     <string name="article">Article</string>
     <string name="user_click">User button was clicked %1$s times</string>
     <string name="loading">Loading</string>
-    <string name="net_error">Network error</string>
+    <string name="data_error">Data error</string>
     <string name="empty_text">No data</string>
 </resources>
