--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="loading">Loading</string>
     <string name="data_error">Data error</string>
     <string name="empty_text">No data</string>
+    <string name="user_desc">User\'s description</string>
 </resources>
