--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="data_error">Data error</string>
     <string name="empty_text">No data</string>
     <string name="user_desc">User\'s description</string>
+    <string name="contributes_desc">contributes: %1$d</string>
 </resources>
